--- a/templates/batch.html
+++ b/templates/batch.html
@@ -15,8 +15,8 @@
 
 
     <div class="container">
-        <a href="batch/{{batch.id-1}}" style="font-size: x-large;">Prev</a>
-        <a href="batch/{{batch.id+1}}" style="font-size: x-large;">Next</a>
+        <a href="/batch/{{batch.id-1}}" style="font-size: x-large;">Prev</a>
+        <a href="/batch/{{batch.id+1}}" style="font-size: x-large;">Next</a>
 
         <h1>Batch info</h1>
         <table class="table" style="width:60%">
